@@ -8,6 +8,7 @@ S3method(getZ,MIMOSAResult)
 S3method(getZ,MIMOSAResultList)
 S3method(pData,MIMOSAResultList)
 S3method(print,MIMOSAResultList)
+S3method(volcanoPlot,MIMOSAResultList)
 export(.fitMCMC)
 export(ConstructMIMOSAExpressionSet)
 export(MIMOSAExpressionSet)
@@ -16,6 +17,7 @@ export(fdrComparison)
 export(getW)
 export(getZ)
 export(setReference)
+export(volcanoPlot)
 exportMethods(MIMOSA)
 exportMethods(countsTable)
 import(Formula)
